Apply patch by Manfred, adapting to FritzBox 6690